@@ -13,7 +13,6 @@ module RSS
       duration_components = [0, 4, 5]
       explicit = true
       keywords = ["salt", "pepper", "shaker", "exciting"]
-      new_feed_url = "http://newlocation.com/example.rss"
       owner = {:name => "John Doe", :email => "john.doe@example.com"}
       subtitle = "A show about everything"
       summary = "All About Everything is a show about " +
